--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
-#fonzalik {background-image: url(Fon/fonzalik.jpg);background-size: cover;}
+#fonzalik {background-image: url(fon/fonzalik.jpg);background-size: cover;}
 
-#fonsocial {background-image: url(Fon/fonsocial.jpg);background-size: cover;}
+#fonsocial {background-image: url(fon/fonsocial.jpg);background-size: cover;}
 
-#fonpersoni{background-image: url(Fon/fonpersoni.jpg);background-size: cover;}
+#fonpersoni{background-image: url(fon/fonpersoni.jpg);background-size: cover;}
 
-#fonistoria {background-image: url(Fon/fonistoria.jpg);background-size: cover;}
+#fonistoria {background-image: url(fon/fonistoria.jpg);background-size: cover;}
 
-#fongeografia {background-image: url(Fon/fongeografia.jpg);background-size: cover;}
+#fongeografia {background-image: url(fon/fongeografia.jpg);background-size: cover;}
 
-#fonekonomika {background-image: url(Fon/fonekonomika.jpg);background-size: cover;}
+#fonekonomika {background-image: url(fon/fonekonomika.jpg);background-size: cover;}
 
-#fonanketa {background-image: url(Fon/fonanketa.jpg);background-size: cover;}
+#fonanketa {background-image: url(fon/fonanketa.jpg);background-size: cover;}
 
 .fontext {background-color:#fsfsdc; width:75%; margin: auto;
 border-radius: 20px;
