--- a/style.css
+++ b/style.css
@@ -10,7 +10,15 @@
 
 #fonekonomika {background-image: url(fon/fonekonomika.jpg);background-size: cover;}
 
-#fonanketa {background-image: url(fon/fonanketa.jpg);background-size: cover;}
+#fonanketa {background-image: url('fon/fonanketa.jpg');background-size: cover;}
+
+body {
+    background-image: url('fon/fonanketa.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+}
+
 
 .fontext {background-color:#fsfsdc; width:75%; margin: auto;
 border-radius: 20px;
