--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-#fonzalik {background-image: url(fon/fonzalik.jpg);background-size: cover;}
+#fonzalik {background-image: url("fon/fonzalik.jpg");background-size: cover;}
 
 #fonsocial {background-image: url(fon/fonsocial.jpg);background-size: cover;}
 
@@ -11,14 +11,6 @@
 #fonekonomika {background-image: url(fon/fonekonomika.jpg);background-size: cover;}
 
 #fonanketa {background-image: url('fon/fonanketa.jpg');background-size: cover;}
-
-body {
-    background-image: url('fon/fonanketa.jpg');
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: fixed;
-}
-
 
 .fontext {background-color:#fsfsdc; width:75%; margin: auto;
 border-radius: 20px;
